--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -614,18 +614,17 @@ it is checked that \emph{dcterms:coverage} is not redundant with its sub-propert
 
 \section{Implementation}
 
-With \emph{Missy}, we provide comprehensive Linked Data services\footnote{\textcolor{red}{\url{www.gesis.org/en/missy/linked-data}}} like a \textcolor{red}{triple store} and exports of person-level metadata to Disco RDF in multiple concrete syntaxes (e.g. turtle). 
+In \emph{Missy}, we provide comprehensive Linked Data services\footnote{\textcolor{red}{\url{www.gesis.org/en/missy/linked-data}}} like a \textcolor{red}{triple store} and diverse RDF exports of person-level metadata conforming to the \emph{Disco} vocabulary in multiple concrete syntaxes (e.g. turtle). 
 
 SPARQL is generally seen as the method of choice to validate RDF data according to certain constraints.
-We use the \emph{SPIN}\footnote{\url{http://spinrdf.org/}}, 
+We use \emph{SPIN}\footnote{\url{http://spinrdf.org/}}, 
 a SPARQL-based way to formulate and check constraints, as basis to define a
-validation environment (available at \url{http://purl.org/net/rdfval-demo}) \cite{BoschEckert2014-2}.
+validation environment (available at \url{http://purl.org/net/rdfval-demo}) to validate RDF data according to constraints expressed my arbitrary constraint languages like Shape Expressions\footnote{\url{http://www.w3.org/Submission/shex-primer/}} and the Web Ontology Language \cite{BoschEckert2014-2}.
+The \emph{RDF Validator} also validates RDF data conforming to SPARQL constraints to ensure correct syntax and semantics of vocabularies such as \emph{Disco, Data Cube, PHDD, DCAT, SKOS, and XKOS}.
 The SPIN engine checks for each resource if it satisfies all constraints (associated with its assigned classes) and generates a result RDF graph containing information about all constraint violations.
-Within the validation environment, we define one SPIN construct template for each constraint type (corresponding to a requirement) and vocabulary-specific constraint \footnote{For details about the validation environment see \cite{BoschEckert2014-2}}.
-A SPIN construct template contains a SPARQL CONSTRUCT query which generates constraint violation triples (\emph{spin:ConstraintViolation}) indicating the subject (\emph{spin:violationRoot}) and the properties (\emph{spin:violationPath}), causing constraint violations, and the reason why constraint violations have been raised (\emph{rdfs:label}).
+We define one SPIN construct template for each constraint type (corresponding to a requirement) and vocabulary-specific constraint\footnote{For details about the validation environment see \cite{BoschEckert2014-2}}.
+A SPIN construct template contains a SPARQL CONSTRUCT query which generates constraint violation triples indicating the subject, the properties causing constraint violations, and the reason why constraint violations have been raised.
 A SPIN construct template creates constraint violation triples if all triple patterns within the SPARQL WHERE clause match.
-
-- Validation of Data Cube instances
 
 \section{Evaluation}
 
