--- a/paper/paper7/paper7-appendix.tex
+++ b/paper/paper7/paper7-appendix.tex
@@ -749,7 +749,7 @@ For datatype properties it should be possible to declare frequently needed \emph
 Constraining facets, to restrict datatypes of RDF literals, may be: \emph{xsd:length}, \emph{xsd:minLength}, \emph{xsd:maxLength}, \emph{xsd:pattern}, \emph{xsd:enumeration}, \emph{xsd:whiteSpace}, \\ \emph{xsd:maxInclusive}, \emph{xsd:maxExclusive}, \emph{xsd:minExclusive}, \emph{xsd:minInclusive}, \emph{xsd:total} \emph{Digits}, \emph{xsd:fractionDigits}.
 
 \begin{itemize}
-	\item \textbf{{\em DISCO-C-DATA-PROPERTY-FACETS-01:}} The abstract of a study (\emph{disco:purpose}) should have a minimum length (\emph{xsd:minInclusive}) of x. 
+	\item \textbf{{\em DISCO-C-DATA-PROPERTY-FACETS-01:}} The abstract of a study (\emph{disco:purpose}) should have a minimum length (\emph{xsd:minLength}) of x. 
 \end{itemize}
 
 \subsection{Literal Pattern Matching}
